@startuml overview

' Database
'---------
interface Database {
    +metaPopulation
    +constructorByObjectType
    +accessControlById
}

interface DatabaseObject {
    +id
    +objectType
    +version
    +roleByRoleTypeId
}
DatabaseObject --> Database

' Workspace
'---------
interface Workspace {
}
Workspace o-- Database

interface WorkspaceObject {
    +id
    +objectType
}
WorkspaceObject o-- Workspace
WorkspaceObject o-- DatabaseObject

' Session
'---------
interface Session {
    +hasChanges
}
Session o-- Database

interface SessionObject {
    +id
    +objectType
    +newId
    +version
    +isNew
    +hasChanges
}
SessionObject o-- Session
SessionObject o-- WorkspaceObject
SessionObject o-- DatabaseObject

@enduml
